--- a/src/main/resources/views/LoginView.fxml
+++ b/src/main/resources/views/LoginView.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -9,31 +11,33 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1366.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.LoginController">
    <children>
-      <Pane layoutX="607.0" layoutY="50.0" prefHeight="601.0" prefWidth="700.0" styleClass="forms">
+      <Pane layoutX="663.0" layoutY="50.0" prefHeight="601.0" prefWidth="600.0" styleClass="forms">
          <children>
-            <Label layoutX="221.0" layoutY="28.0" styleClass="title" text="Iniciar Sesión" />
-            <TextField layoutX="250.0" layoutY="172.0" styleClass="text-field" />
-            <Label layoutX="315.0" layoutY="146.0" styleClass="forms" text="Usuario" />
-            <TextField layoutX="250.0" layoutY="289.0" styleClass="text-field" />
-            <Label layoutX="298.0" layoutY="264.0" styleClass="forms" text="Contraseña" />
-            <ImageView fitHeight="41.0" fitWidth="36.0" layoutX="332.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
+            <Label layoutX="169.0" layoutY="28.0" styleClass="title" text="Iniciar Sesión" />
+            <TextField layoutX="198.0" layoutY="216.0" styleClass="text-field" />
+            <Label layoutX="265.0" layoutY="179.0" styleClass="forms" text="Usuario" />
+            <TextField layoutX="201.0" layoutY="344.0" styleClass="text-field" />
+            <Label layoutX="249.0" layoutY="310.0" styleClass="forms" text="Contraseña" />
+            <ImageView fitHeight="41.0" fitWidth="36.0" layoutX="280.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/UserLogo.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="41.0" fitWidth="78.0" layoutX="329.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="41.0" fitWidth="78.0" layoutX="280.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/PasswordLogo.png" />
                </image>
             </ImageView>
+            <Button layoutX="201.0" layoutY="456.0" mnemonicParsing="false" text="Iniciar Sesión" />
          </children></Pane>
-      <ImageView fitHeight="186.0" fitWidth="169.0" layoutX="193.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="186.0" fitWidth="169.0" layoutX="255.0" layoutY="161.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/Logo.png" />
          </image>
       </ImageView>
-      <Label layoutX="223.0" layoutY="330.0" styleClass="title" text="Jokify" />
-      <Label layoutX="135.0" layoutY="509.0" styleClass="body" text="La banda sonora de tu vida," />
-      <Label layoutX="157.0" layoutY="530.0" styleClass="body" text="con un toque de locura." />
+      <Label layoutX="278.0" layoutY="330.0" styleClass="title" text="Jokify" />
+      <Label layoutX="198.0" layoutY="418.0" styleClass="body" text="La banda sonora de tu vida," />
+      <Label layoutX="212.0" layoutY="439.0" styleClass="body" text="con un toque de locura." />
+      <Hyperlink layoutX="249.0" layoutY="517.0" styleClass="link" text="Crear una cuenta" />
    </children>
 </AnchorPane>
