--- a/src/main/resources/views/SingInView.fxml
+++ b/src/main/resources/views/SingInView.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1366.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1366.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.SingInController">
     <children>
         <Pane layoutX="652.0" layoutY="50.0" prefHeight="601.0" prefWidth="600.0" styleClass="forms">
             <children>
                 <Label layoutX="133.0" layoutY="32.0" styleClass="title" text="Crear una cuenta" />
-                <TextField layoutX="203.0" layoutY="185.0" styleClass="text-field" />
+                <TextField fx:id="textFieldUser" layoutX="203.0" layoutY="185.0" styleClass="text-field" />
                 <Label layoutX="268.0" layoutY="153.0" styleClass="forms" text="Usuario" />
-                <TextField layoutX="202.0" layoutY="311.0" styleClass="text-field" />
+                <TextField fx:id="textFieldPassword" layoutX="202.0" layoutY="311.0" styleClass="text-field" />
                 <Label layoutX="250.0" layoutY="280.0" styleClass="forms" text="Contraseña" />
                 <ImageView fitHeight="41.0" fitWidth="36.0" layoutX="285.0" layoutY="117.0" pickOnBounds="true" preserveRatio="true">
                     <image>
@@ -28,14 +28,14 @@
                         <Image url="@../images/PasswordLogo.png" />
                     </image>
                 </ImageView>
-                <Button layoutX="203.0" layoutY="520.0" mnemonicParsing="false" text="Crear Cuenta" />
+                <Button fx:id="btnCreateAcount" layoutX="203.0" layoutY="520.0" mnemonicParsing="false" onAction="#createAcount" text="Crear Cuenta" />
             <ImageView fitHeight="66.0" fitWidth="69.0" layoutX="270.0" layoutY="351.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/EmailLogo.png" />
                </image>
             </ImageView>
             <Label layoutX="273.0" layoutY="397.0" styleClass="forms" text="Correo" />
-            <TextField layoutX="203.0" layoutY="427.0" styleClass="text-field" />
+            <TextField fx:id="textFieldEmail" layoutX="203.0" layoutY="427.0" styleClass="text-field" />
             </children></Pane>
         <ImageView fitHeight="186.0" fitWidth="169.0" layoutX="255.0" layoutY="161.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -45,6 +45,6 @@
         <Label layoutX="278.0" layoutY="330.0" styleClass="title" text="Jokify" />
         <Label layoutX="198.0" layoutY="418.0" styleClass="body" text="La banda sonora de tu vida," />
         <Label layoutX="212.0" layoutY="439.0" styleClass="body" text="con un toque de locura." />
-        <Hyperlink layoutX="266.0" layoutY="516.0" styleClass="link" text="Iniciar Sesión" />
+        <Hyperlink fx:id="hpLogin" layoutX="266.0" layoutY="516.0" onAction="#login" styleClass="link" text="Iniciar Sesión" />
     </children>
 </AnchorPane>
