--- a/src/main/resources/styles/parentStyle.css
+++ b/src/main/resources/styles/parentStyle.css
@@ -87,5 +87,35 @@
 }
 
 .split-pane:horizontal > .split-pane-divider {
-    -fx-padding: 2px;
+    -fx-padding: 1px;
+}
+
+.topLeftContent {
+    -fx-background-color: #20201D;
+    -fx-background-radius: 10px;
+    -fx-font-size: 16px;
+    -fx-text-fill: #F0F0F0;
+    -fx-font-weight: bold;
+}
+
+.leftContent {
+    -fx-background-color: #20201D;
+    -fx-background-radius: 10px;
+    -fx-font-size: 16px;
+    -fx-text-fill: #F0F0F0;
+    -fx-font-weight: bold;
+}
+
+.btnTopLeftContent {
+    -fx-background-color: #20201D;
+    -fx-alignment: baseline-left;
+}
+
+.btnTopLeftContent:hover {
+    -fx-background-color: #20201D;
+    -fx-text-fill: #00A6FB;
+}
+
+.btnTopLeftContent:pressed {
+    -fx-text-fill: #191414;
 }
