--- a/src/main/resources/views/MenuView.fxml
+++ b/src/main/resources/views/MenuView.fxml
@@ -1,13 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1366.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.MenuController">
    <children>
-      <SplitPane dividerPositions="0.25" prefHeight="700.0" prefWidth="1366.0" styleClass="splitPane">
+      <SplitPane dividerPositions="0.23" prefHeight="700.0" prefWidth="1366.0" styleClass="splitPane">
         <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+               <children>
+                  <Pane layoutX="13.0" layoutY="14.0" prefHeight="120.0" prefWidth="291.0" styleClass="topLeftContent">
+                     <children>
+                        <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="24.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/HomeLogo.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="24.0" layoutY="73.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/SearchLogo.png" />
+                           </image>
+                        </ImageView>
+                        <Button layoutX="70.0" layoutY="16.0" mnemonicParsing="false" styleClass="btnTopLeftContent" text="Home" />
+                        <Button layoutX="70.0" layoutY="72.0" mnemonicParsing="false" styleClass="btnTopLeftContent" text="Search" />
+                     </children>
+                  </Pane>
+                  <Pane layoutX="13.0" layoutY="146.0" prefHeight="538.0" prefWidth="291.0" styleClass="leftContent" />
+               </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
         </items>
       </SplitPane>
