--- a/src/main/resources/views/MenuView.fxml
+++ b/src/main/resources/views/MenuView.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1366.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.MenuController">
@@ -25,8 +26,8 @@
                               <Image url="@../images/SearchLogo.png" />
                            </image>
                         </ImageView>
-                        <Button layoutX="70.0" layoutY="16.0" mnemonicParsing="false" styleClass="btnTopLeftContent" text="Jokify" />
-                        <Button layoutX="70.0" layoutY="72.0" mnemonicParsing="false" styleClass="btnTopLeftContent" text="Buscar" />
+                        <Button fx:id="btnJokify" layoutX="70.0" layoutY="16.0" mnemonicParsing="false" onAction="#showJokify" styleClass="btnTopLeftContent" text="Jokify" />
+                        <Button fx:id="btnSearch" layoutX="70.0" layoutY="72.0" mnemonicParsing="false" onAction="#showSearch" styleClass="btnTopLeftContent" text="Buscar" />
                      </children>
                   </Pane>
                   <Pane layoutX="13.0" layoutY="146.0" prefHeight="538.0" prefWidth="291.0" styleClass="leftContent">
@@ -36,11 +37,15 @@
                               <Image url="@../images/LibraryLogo.png" />
                            </image>
                         </ImageView>
-                        <Button layoutX="69.0" layoutY="16.0" mnemonicParsing="false" styleClass="btnTopLeftContent" text="Libreria" />
+                        <Button fx:id="btnLibrary" layoutX="69.0" layoutY="16.0" mnemonicParsing="false" onAction="#showLibrary" styleClass="btnTopLeftContent" text="Tu Libreria" />
                      </children>
                   </Pane>
-               </children></AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+               </children>
+          </AnchorPane>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+              <!-- Contenido dinámico a la derecha del SplitPane -->
+              <BorderPane fx:id="contentPane" minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="1049.0" />
+          </AnchorPane>
         </items>
       </SplitPane>
    </children>
