First Version of the admin menu interface

--- a/src/main/resources/styles/parentStyle.css
+++ b/src/main/resources/styles/parentStyle.css
@@ -119,3 +119,11 @@
 .btnTopLeftContent:pressed {
     -fx-text-fill: #191414;
 }
+
+/*STYLES FOR THE ADMIN MENU*/
+
+.menuTitle {
+    -fx-font-size: 18px;
+    -fx-text-fill: #00A6FB;
+    -fx-font-weight: bold;
+}
