Controller for the admin Menu

--- a/src/main/resources/views/MenuAdminView.fxml
+++ b/src/main/resources/views/MenuAdminView.fxml
@@ -17,9 +17,9 @@
                     <children>
                         <Pane layoutX="13.0" layoutY="13.0" prefHeight="590.0" prefWidth="291.0" styleClass="leftContent">
                             <children>
-                                <Button fx:id="btnLibrary" layoutX="68.0" layoutY="441.0" mnemonicParsing="false" styleClass="btnTopLeftContent" text=" Cargar Información" />
-                        <Button fx:id="btnLibrary1" layoutX="75.0" layoutY="365.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="235.0" styleClass="btnTopLeftContent" text="Agregar Canción" />
-                        <Button fx:id="btnLibrary2" layoutX="75.0" layoutY="295.0" mnemonicParsing="false" styleClass="btnTopLeftContent" text="Agregar Artista" />
+                                <Button fx:id="btnShowDownloadInfo" layoutX="68.0" layoutY="441.0" mnemonicParsing="false" onAction="#showDownloadInfo" styleClass="btnTopLeftContent" text=" Cargar Información" />
+                        <Button fx:id="btnShowAddSong" layoutX="75.0" layoutY="365.0" mnemonicParsing="false" onAction="#showAddSong" prefHeight="28.0" prefWidth="235.0" styleClass="btnTopLeftContent" text="Agregar Canción" />
+                        <Button fx:id="btnShowAddArtist" layoutX="75.0" layoutY="295.0" mnemonicParsing="false" onAction="#showAddArtist" styleClass="btnTopLeftContent" text="Agregar Artista" />
                         <Label layoutX="75.0" layoutY="50.0" styleClass="menuTitle" text="Gestión Jokify" />
                         <ImageView fitHeight="28.0" fitWidth="27.0" layoutX="34.0" layoutY="296.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -45,7 +45,7 @@
                         </Pane>
                   <Pane layoutX="11.0" layoutY="624.0" prefHeight="60.0" prefWidth="291.0" styleClass="leftContent">
                      <children>
-                        <Button fx:id="btnLibrary3" layoutX="14.0" layoutY="16.0" mnemonicParsing="false" styleClass="btnTopLeftContent" text="Cerrar Sesión" />
+                        <Button fx:id="btnCloseSesion" layoutX="14.0" layoutY="16.0" mnemonicParsing="false" onAction="#closeSesion" styleClass="btnTopLeftContent" text="Cerrar Sesión" />
                      </children>
                   </Pane>
                     </children>
