--- a/src/main/resources/views/ShowAddSong.fxml
+++ b/src/main/resources/views/ShowAddSong.fxml
@@ -1,10 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="1049.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.MenuAdminController">
     <children>
-        <Label layoutX="382.0" layoutY="339.0" text="PRUEBA AGREGAR CANCIÓN" />
+        <Label layoutX="57.0" layoutY="33.0" styleClass="menuTitle" text="Datos de la cación" />
+        <TextField layoutX="134.0" layoutY="111.0" prefHeight="23.0" prefWidth="115.0" />
+        <Label layoutX="57.0" layoutY="113.0" styleClass="menuText" text="Nombre" />
+        <Label layoutX="57.0" layoutY="162.0" styleClass="menuText" text="Albúm" />
+        <TextField layoutX="134.0" layoutY="162.0" prefHeight="23.0" prefWidth="115.0" />
+        <Button layoutX="793.0" layoutY="224.0" mnemonicParsing="false" text="Agregar" />
+        <Button layoutX="534.0" layoutY="224.0" mnemonicParsing="false" text="Nuevo" />
+        <TableView layoutX="55.0" layoutY="283.0" prefHeight="312.0" prefWidth="932.0" styleClass="table">
+            <columns>
+                <TableColumn prefWidth="240.0" styleClass="column" text="Código" />
+                <TableColumn prefWidth="227.0" styleClass="column" text="Nombre" />
+                <TableColumn prefWidth="201.0" styleClass="column" text="Nacionalidad" />
+                <TableColumn prefWidth="261.0" styleClass="column" text="Artista / Grupo" />
+            </columns>
+        </TableView>
+        <Button layoutX="556.0" layoutY="624.0" mnemonicParsing="false" text="Eliminar" />
+        <Button layoutX="268.0" layoutY="624.0" mnemonicParsing="false" text="Actualizar" />
+      <Label layoutX="376.0" layoutY="113.0" styleClass="menuText" text="Carátula" />
+      <Label layoutX="376.0" layoutY="164.0" styleClass="menuText" text="Año" />
+      <TextField layoutX="456.0" layoutY="112.0" prefHeight="23.0" prefWidth="115.0" />
+      <TextField layoutX="456.0" layoutY="162.0" prefHeight="23.0" prefWidth="115.0" />
+      <Label layoutX="683.0" layoutY="115.0" styleClass="menuText" text="Duración" />
+      <Label layoutX="683.0" layoutY="165.0" styleClass="menuText" text="URL Youtube" />
+      <TextField layoutX="793.0" layoutY="113.0" prefHeight="23.0" prefWidth="115.0" />
+      <TextField layoutX="793.0" layoutY="160.0" prefHeight="23.0" prefWidth="115.0" />
+      <ComboBox layoutX="134.0" layoutY="227.0" prefHeight="23.0" prefWidth="200.0" styleClass="comboBox" />
+      <Label layoutX="54.0" layoutY="229.0" styleClass="menuText" text="Género" />
     </children>
 </AnchorPane>
