Add artist elements in the controller

--- a/src/main/resources/views/ShowAddArtist.fxml
+++ b/src/main/resources/views/ShowAddArtist.fxml
@@ -11,22 +11,22 @@
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="1049.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.MenuAdminController">
    <children>
       <Label layoutX="57.0" layoutY="33.0" styleClass="menuTitle" text="Datos del artista / Grupo" />
-      <TextField layoutX="194.0" layoutY="112.0" prefHeight="23.0" prefWidth="115.0" />
+      <TextField fx:id="txtNameArtist" layoutX="194.0" layoutY="112.0" prefHeight="23.0" prefWidth="115.0" />
       <Label layoutX="57.0" layoutY="113.0" styleClass="menuText" text="Nombre" />
       <Label layoutX="57.0" layoutY="162.0" styleClass="menuText" text="Nacionalidad" />
-      <CheckBox layoutX="447.0" layoutY="113.0" mnemonicParsing="false" styleClass="menuText" text="¿Es un grupo?" />
-      <TextField layoutX="194.0" layoutY="161.0" prefHeight="23.0" prefWidth="115.0" />
-      <Button layoutX="787.0" layoutY="109.0" mnemonicParsing="false" text="Agregar" />
-      <Button layoutX="787.0" layoutY="159.0" mnemonicParsing="false" text="Nuevo" />
-      <TableView layoutX="55.0" layoutY="226.0" prefHeight="369.0" prefWidth="932.0" styleClass="table">
+      <CheckBox fx:id="checkBoxIsGroup" layoutX="447.0" layoutY="113.0" mnemonicParsing="false" styleClass="menuText" text="¿Es un grupo?" />
+      <TextField fx:id="txtNationalityArtist" layoutX="194.0" layoutY="161.0" prefHeight="23.0" prefWidth="115.0" />
+      <Button fx:id="btnAddArtist" layoutX="787.0" layoutY="109.0" mnemonicParsing="false" onAction="#addArtist" text="Agregar" />
+      <Button fx:id="btnNewArtist" layoutX="787.0" layoutY="159.0" mnemonicParsing="false" onAction="#newArtist" text="Nuevo" />
+      <TableView fx:id="tableViewArtist" layoutX="55.0" layoutY="226.0" prefHeight="369.0" prefWidth="932.0" styleClass="table">
         <columns>
-          <TableColumn prefWidth="240.0" styleClass="column" text="Código" />
-            <TableColumn prefWidth="227.0" styleClass="column" text="Nombre" />
-            <TableColumn prefWidth="201.0" styleClass="column" text="Nacionalidad" />
-            <TableColumn prefWidth="261.0" styleClass="column" text="Artista / Grupo" />
+          <TableColumn fx:id="columnCodeArtist" prefWidth="240.0" styleClass="column" text="Código" />
+            <TableColumn fx:id="columnNameArtist" prefWidth="227.0" styleClass="column" text="Nombre" />
+            <TableColumn fx:id="columnNationalityArtist" prefWidth="201.0" styleClass="column" text="Nacionalidad" />
+            <TableColumn fx:id="columnIsGroup" prefWidth="261.0" styleClass="column" text="Artista / Grupo" />
         </columns>
       </TableView>
-      <Button layoutX="556.0" layoutY="624.0" mnemonicParsing="false" text="Eliminar" />
-      <Button layoutX="268.0" layoutY="624.0" mnemonicParsing="false" text="Actualizar" />
+      <Button fx:id="btnDeleteArtist" layoutX="556.0" layoutY="624.0" mnemonicParsing="false" onAction="#deleteArtist" text="Eliminar" />
+      <Button fx:id="btnUpdateArtist" layoutX="268.0" layoutY="624.0" mnemonicParsing="false" onAction="#updateArtist" text="Actualizar" />
    </children>
 </AnchorPane>
