Add songs elements in the menuAdminController

--- a/src/main/resources/views/ShowAddSong.fxml
+++ b/src/main/resources/views/ShowAddSong.fxml
@@ -11,31 +11,35 @@
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="1049.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.MenuAdminController">
     <children>
         <Label layoutX="57.0" layoutY="33.0" styleClass="menuTitle" text="Datos de la cación" />
-        <TextField layoutX="134.0" layoutY="111.0" prefHeight="23.0" prefWidth="115.0" />
+        <TextField fx:id="txtNameSong" layoutX="134.0" layoutY="111.0" prefHeight="23.0" prefWidth="115.0" />
         <Label layoutX="57.0" layoutY="113.0" styleClass="menuText" text="Nombre" />
         <Label layoutX="57.0" layoutY="162.0" styleClass="menuText" text="Albúm" />
-        <TextField layoutX="134.0" layoutY="162.0" prefHeight="23.0" prefWidth="115.0" />
-        <Button layoutX="793.0" layoutY="224.0" mnemonicParsing="false" text="Agregar" />
-        <Button layoutX="534.0" layoutY="224.0" mnemonicParsing="false" text="Nuevo" />
-        <TableView layoutX="55.0" layoutY="283.0" prefHeight="312.0" prefWidth="932.0" styleClass="table">
+        <TextField fx:id="txtAlbumSong" layoutX="134.0" layoutY="162.0" prefHeight="23.0" prefWidth="115.0" />
+        <Button fx:id="btnAddSong" layoutX="793.0" layoutY="224.0" mnemonicParsing="false" onAction="#addSong" text="Agregar" />
+        <Button fx:id="btnNewSong" layoutX="534.0" layoutY="224.0" mnemonicParsing="false" onAction="#newSong" text="Nuevo" />
+        <TableView fx:id="tableViewSong" layoutX="55.0" layoutY="283.0" prefHeight="312.0" prefWidth="932.0" styleClass="table">
             <columns>
-                <TableColumn prefWidth="240.0" styleClass="column" text="Código" />
-                <TableColumn prefWidth="227.0" styleClass="column" text="Nombre" />
-                <TableColumn prefWidth="201.0" styleClass="column" text="Nacionalidad" />
-                <TableColumn prefWidth="261.0" styleClass="column" text="Artista / Grupo" />
+                <TableColumn fx:id="columnCodeSong" prefWidth="150.0" styleClass="column" text="Código" />
+                <TableColumn fx:id="columnNameSong" prefWidth="176.0" styleClass="column" text="Nombre" />
+            <TableColumn fx:id="columnArtistSong" prefWidth="165.0" text="Artista" />
+            <TableColumn prefWidth="158.0" text="Albúm" />
+            <TableColumn prefWidth="105.0" text="Año" />
+            <TableColumn prefWidth="175.0" text="Duración" />
             </columns>
         </TableView>
-        <Button layoutX="556.0" layoutY="624.0" mnemonicParsing="false" text="Eliminar" />
-        <Button layoutX="268.0" layoutY="624.0" mnemonicParsing="false" text="Actualizar" />
+        <Button fx:id="btnDeleteSong" layoutX="556.0" layoutY="624.0" mnemonicParsing="false" onAction="#deleteSong" text="Eliminar" />
+        <Button fx:id="btnUpdateSong" layoutX="268.0" layoutY="624.0" mnemonicParsing="false" onAction="#updateSong" text="Actualizar" />
       <Label layoutX="376.0" layoutY="113.0" styleClass="menuText" text="Carátula" />
       <Label layoutX="376.0" layoutY="164.0" styleClass="menuText" text="Año" />
-      <TextField layoutX="456.0" layoutY="112.0" prefHeight="23.0" prefWidth="115.0" />
-      <TextField layoutX="456.0" layoutY="162.0" prefHeight="23.0" prefWidth="115.0" />
+      <TextField fx:id="txtCoverSong" layoutX="456.0" layoutY="112.0" prefHeight="23.0" prefWidth="115.0" />
+      <TextField fx:id="txtYearSong" layoutX="456.0" layoutY="162.0" prefHeight="23.0" prefWidth="115.0" />
       <Label layoutX="683.0" layoutY="115.0" styleClass="menuText" text="Duración" />
       <Label layoutX="683.0" layoutY="165.0" styleClass="menuText" text="URL Youtube" />
-      <TextField layoutX="793.0" layoutY="113.0" prefHeight="23.0" prefWidth="115.0" />
-      <TextField layoutX="793.0" layoutY="160.0" prefHeight="23.0" prefWidth="115.0" />
-      <ComboBox layoutX="134.0" layoutY="227.0" prefHeight="23.0" prefWidth="200.0" styleClass="comboBox" />
+      <TextField fx:id="txtDurationSong" layoutX="793.0" layoutY="113.0" prefHeight="23.0" prefWidth="115.0" />
+      <TextField fx:id="txtURLSong" layoutX="793.0" layoutY="160.0" prefHeight="23.0" prefWidth="115.0" />
+      <ComboBox fx:id="comboBoxGenreSong" layoutX="134.0" layoutY="227.0" prefHeight="23.0" prefWidth="200.0" styleClass="comboBox" />
       <Label layoutX="54.0" layoutY="229.0" styleClass="menuText" text="Género" />
+      <Label layoutX="288.0" layoutY="35.0" styleClass="menuText" text="Nombre del artista: " />
+      <TextField fx:id="txtArtistNameSong" layoutX="456.0" layoutY="33.0" prefHeight="23.0" prefWidth="115.0" />
     </children>
 </AnchorPane>
