--- a/src/main/resources/styles/parentStyle.css
+++ b/src/main/resources/styles/parentStyle.css
@@ -142,13 +142,21 @@
 }
 
 .table .column-header {
-    -fx-background-color: #20201D; /* Fondo transparente */
-    -fx-text-fill: #00A6FB; /* Color del texto */
-    -fx-font-size: 14px; /* Tamaño de la fuente */
+    -fx-background-color: #20201D;
+    -fx-text-fill: #00A6FB;
+    -fx-font-size: 14px;
 }
 
 .table .column-header .label {
-    -fx-text-fill: #00A6FB; /* Color del texto */
+    -fx-text-fill: #00A6FB;
+}
+
+.table-row-cell {
+    -fx-background-color: #20201D;
+}
+
+.table-row-cell .text {
+    -fx-fill: #f0f0f0;
 }
 
 .table-row-cell:selected {
