Change the style of the images in the jokify menu

--- a/src/main/resources/styles/parentStyle.css
+++ b/src/main/resources/styles/parentStyle.css
@@ -190,6 +190,10 @@
 }
 
 .stackPane:hover {
+    -fx-background-color: #20201D;
+}
+
+.stackPane:pressed {
     -fx-background-color: #00A6FB;
 }
 
