--- a/src/main/resources/views/ShowSearch.fxml
+++ b/src/main/resources/views/ShowSearch.fxml
@@ -3,8 +3,9 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="1049.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.MenuController">
+<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="1049.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.ShowSearchController">
     <children>
         <Label layoutX="440.0" layoutY="339.0" text="PRUEBA SEARCH" />
+      <Label layoutX="38.0" layoutY="42.0" styleClass="menuTitle" text="Realizar busqueda" />
     </children>
 </AnchorPane>
