--- a/src/main/resources/views/ShowSearch.fxml
+++ b/src/main/resources/views/ShowSearch.fxml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="698.0" prefWidth="1049.0" styleClass="body" stylesheets="@../styles/parentStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.estr.jokify.controllers.ShowSearchController">
     <children>
-        <Label layoutX="440.0" layoutY="339.0" text="PRUEBA SEARCH" />
+        <Label layoutX="413.0" layoutY="339.0" text="Realiza una busqueda" />
       <Label layoutX="38.0" layoutY="42.0" styleClass="menuTitle" text="Realizar busqueda" />
+      <TextField layoutX="275.0" layoutY="41.0" prefHeight="23.0" prefWidth="240.0" styleClass="searchField" />
+      <Button layoutX="325.0" layoutY="77.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="155.0" styleClass="menuBtn" text="Buscar" />
+      <ImageView fitHeight="76.0" fitWidth="68.0" layoutX="933.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/Logo.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="28.0" fitWidth="36.0" layoutX="426.0" layoutY="77.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/SearchLogo2.png" />
+         </image>
+      </ImageView>
     </children>
 </AnchorPane>
